--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ GOOGLE_API_KEY=your-gemini-or-vertex-api-key
 XAI_API_KEY=your-grok-api-key
 # Optional: comma separated X handles (without @) to focus search on
 X_HANDLES=elonmusk,googledeepmind
+POLL_INTERVAL_SECONDS=1800
+
+
