Add Telegram integration for sending poll results and update configuration
- Introduced Telegram agent to handle sending poll results to specified chat IDs.
- Updated configuration to include TELEGRAM_TOKEN and TELEGRAM_CHAT_IDS.
- Enhanced main service logic to ensure Telegram notifications are sent after poll generation.
- Added utility functions for sending messages to Telegram.

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,12 @@ XAI_API_KEY=your-grok-api-key
 X_HANDLES=elonmusk,googledeepmind
 POLL_INTERVAL_SECONDS=1800
 
+# Telegram Bot Configuration
+# Get your bot token from @BotFather on Telegram
+TELEGRAM_TOKEN=your-telegram-bot-token
+# Comma separated chat IDs where poll results will be sent
+# To get chat ID: add bot to group, send a message, then call:
+# https://api.telegram.org/bot<YOUR_TOKEN>/getUpdates
+TELEGRAM_CHAT_IDS=your-chat-id-1,your-chat-id-2
+
 
