Enhance poll-agent: add INCLUDE_TRENDING_NEWS configuration, update X agent to fetch trending news, and improve JSON parsing in Telegram agent

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ XAI_API_KEY=your-grok-api-key
 # Optional: comma separated X handles (without @) to focus search on
 X_HANDLES=elonmusk,googledeepmind
 POLL_INTERVAL_SECONDS=1800
+# Whether to include trending topics/news from X/Twitter platform (true/false, default: true)
+# When enabled, will search X's trending section and viral posts in addition to specified handles
+# Only searches X/Twitter platform, NOT external websites
+INCLUDE_TRENDING_NEWS=true
 
 # Telegram Bot Configuration
 # Get your bot token from @BotFather on Telegram
