Update configuration and improve JSON handling: - Refactor .env.example to include new settings for agent models and remove outdated keys. - Modify README.md to clarify requirements. - Enhance config.py to support new agent model settings. - Update main.py to remove deprecated gemini model logic and log agent model. - Improve tg_agent.py and x_agent.py to support new JSON structure and validation. - Update grok_x_search.py to reflect changes in poll object fields and requirements.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,17 @@
-GOOGLE_API_KEY=your-gemini-or-vertex-api-key
-XAI_API_KEY=your-grok-api-key
-# Optional: comma separated X handles (without @) to focus search on
-X_HANDLES=elonmusk,googledeepmind
-POLL_INTERVAL_SECONDS=1800
+XAI_API_KEY=your-xai-grok-api-key
+
+# Comma separated X handles (without @) to monitor
+X_HANDLES=cb_doge,Polymarket,Kalshi
+
+# Poll interval in seconds (default: 3600 = 1 hour)
+POLL_INTERVAL_SECONDS=3600
+
+# Model for agents (using Grok via LiteLLM, default: grok-beta)
+AGENT_MODEL=grok-beta
+
+# Model for Grok x_search (default: grok-beta)
+GROK_MODEL=grok-beta
+
 # Whether to include trending topics/news from X/Twitter platform (true/false, default: true)
 # When enabled, will search X's trending section and viral posts in addition to specified handles
 # Only searches X/Twitter platform, NOT external websites
