--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/poll-agent
+  IMAGE_NAME: ${{ secrets.DOCKER_HUB_USER }}/poll-agent
 
 jobs:
   build-and-push:
