--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,7 @@ TELEGRAM_TOKEN=your-telegram-bot-token
 TELEGRAM_CHAT_IDS=your-chat-id-1,your-chat-id-2
 
 
+# World MACI settings
+WORLD_MACI_API_ENDPOINT=
+WORLD_MACI_API_TOKEN=
+WORLD_MACI_VOTE_URL=
