--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,9 @@ TELEGRAM_CHAT_IDS=your-chat-id-1,your-chat-id-2
 WORLD_MACI_API_ENDPOINT=
 WORLD_MACI_API_TOKEN=
 WORLD_MACI_VOTE_URL=
+
+# Twitter/X API v2 Configuration (OAuth 1.0a)
+TWITTER_API_KEY=your-twitter-api-key
+TWITTER_API_SECRET=your-twitter-api-secret
+TWITTER_ACCESS_TOKEN=your-twitter-access-token
+TWITTER_ACCESS_TOKEN_SECRET=your-twitter-access-token-secret
