--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "xai-sdk>=1.4.1",
     "python-dotenv>=1.2.1",
     "requests>=2.32.0",
+    "requests-oauthlib>=2.0.0",
     "litellm>=1.80.0",
 ]
 
