feat: add support for custom X poll rules

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,10 @@ GROK_MODEL=grok-beta
 # Only searches X/Twitter platform, NOT external websites
 INCLUDE_TRENDING_NEWS=true
 
+# Optional: override the built-in X poll rules text with a local file path.
+# Keep the file private and set it at runtime (works well with Docker bind mounts).
+X_POLL_RULES_PATH=
+
 # Telegram Bot Configuration
 # Get your bot token from @BotFather on Telegram
 TELEGRAM_TOKEN=your-telegram-bot-token
