feat: add World MACI HTTP timeouts and idempotency key to poll push functionality

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,9 @@ TELEGRAM_CHAT_IDS=your-chat-id-1,your-chat-id-2
 WORLD_MACI_API_ENDPOINT=
 WORLD_MACI_API_TOKEN=
 WORLD_MACI_VOTE_URL=
+# World MACI HTTP timeouts (deploy can take >30s; defaults: connect=10, read=120)
+WORLD_MACI_CONNECT_TIMEOUT_SECONDS=10
+WORLD_MACI_READ_TIMEOUT_SECONDS=120
 
 # Twitter/X API v2 Configuration (OAuth 1.0a)
 TWITTER_API_KEY=your-twitter-api-key
