feat: add RUN_ONCE configuration to control single iteration execution to support lambda

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,9 @@ GROK_MODEL=grok-beta
 # Only searches X/Twitter platform, NOT external websites
 INCLUDE_TRENDING_NEWS=true
 
+# Run one iteration then exit (useful for cron/Lambda/ECS RunTask)
+RUN_ONCE=false
+
 # Optional: override the built-in X poll rules text with a local file path.
 # Keep the file private and set it at runtime (works well with Docker bind mounts).
 X_POLL_RULES_PATH=
