--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,7 @@ on:
 env:
   IMAGE_NAME: ${{ secrets.DOCKER_HUB_USER }}/poll-agent
   AWS_REGION: us-east-1
-  ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+  ECR_REPOSITORY: poll-agent
   LAMBDA_FUNCTION_NAME: ${{ secrets.LAMBDA_FUNCTION_NAME }}
   LAMBDA_ALIAS: ${{ secrets.LAMBDA_ALIAS }}
 
@@ -59,12 +59,6 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Ensure ECR repository exists
-        if: ${{ env.ECR_REPOSITORY != '' }}
-        run: |
-          aws ecr describe-repositories --repository-names "${ECR_REPOSITORY}" >/dev/null 2>&1 || \
-          aws ecr create-repository --repository-name "${ECR_REPOSITORY}" >/dev/null
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
