feat: add Vota indexer configuration and fetch recent poll titles to avoid duplicates

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,13 @@ INCLUDE_TRENDING_NEWS=true
 # Run one iteration then exit (useful for cron/Lambda/ECS RunTask)
 RUN_ONCE=false
 
+# Dora vota indexer (used to fetch recent on-chain poll titles to avoid duplicates)
+VOTA_INDEXER_ENDPOINT=https://vota-api.dorafactory.org/
+VOTA_RECENT_ROUNDS_N=10
+VOTA_INDEXER_TIMEOUT_SECONDS=15
+VOTA_INDEXER_MAX_RETRIES=3
+VOTA_INDEXER_BACKOFF_SECONDS=0.5
+
 # Optional: override the built-in X poll rules text with a local file path.
 # Keep the file private and set it at runtime (works well with Docker bind mounts).
 X_POLL_RULES_PATH=
