feat: add support for separate Telegram group and channel chat IDs in configuration

--- a/.env.example
+++ b/.env.example
@@ -34,10 +34,14 @@ X_POLL_RULES_PATH=
 # Telegram Bot Configuration
 # Get your bot token from @BotFather on Telegram
 TELEGRAM_TOKEN=your-telegram-bot-token
-# Comma separated chat IDs where poll results will be sent
+# Comma separated chat IDs where poll results will be sent (legacy)
 # To get chat ID: add bot to group, send a message, then call:
 # https://api.telegram.org/bot<YOUR_TOKEN>/getUpdates
 TELEGRAM_CHAT_IDS=your-chat-id-1,your-chat-id-2
+
+# Optional: separate group vs channel targets (preferred)
+TELEGRAM_GROUP_CHAT_IDS=your-group-chat-id-1,your-group-chat-id-2
+TELEGRAM_CHANNEL_CHAT_IDS=your-channel-chat-id-1,@your_public_channel
 
 
 # World MACI settings
