chore: update code structure and remove unused imports

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ XAI_API_KEY=your-xai-grok-api-key
 
 # Comma separated X handles (without @) to monitor
 X_HANDLES=cb_doge,Polymarket,Kalshi
-
+PRIVATE_WIRES=PirateWires, micsolana
 # Poll interval in seconds (default: 3600 = 1 hour)
 POLL_INTERVAL_SECONDS=3600
 
