feat: add Vercel automation bypass secret to configuration and update related functionality

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,8 @@ TELEGRAM_CHANNEL_CHAT_IDS=your-channel-chat-id-1,@your_public_channel
 # World MACI settings
 WORLD_MACI_API_ENDPOINT=
 WORLD_MACI_API_TOKEN=
+# Required when the World MACI endpoint is protected by Vercel deployment protection
+VERCEL_AUTOMATION_BYPASS_SECRET=
 WORLD_MACI_VOTE_URL=
 # World MACI HTTP timeouts (deploy can take >30s; defaults: connect=10, read=120)
 WORLD_MACI_CONNECT_TIMEOUT_SECONDS=10
